# small_interpreter

./: .pi_history  Cargo.toml  README.md  bench_mimalloc.pi  main.pi  test.pi  test_concat.pi  test_fn.pi  test_shared_global.pi
benchmarks/: README.md  run.py
benchmarks/node/: 1million_loop.js  fib.js  prime.js
benchmarks/python/: 1million_loop.py  fib.py  prime.py
docs/: language_guide.md  stdlib.md
editors/vscode/: language-configuration.json  package.json
editors/vscode/syntaxes/: yatsuscript.tmLanguage.json
examples/: 1million_loop.pi  1million_loop.ys  bench_mimalloc.ys  fib.pi  fib.ys  main.ys  objects.ys  perf_test.ys  prime.pi  prime.ys  test.ys  test_concat.ys  test_concurrency.ys  test_fn.ys  test_fn_ref.ys  test_not.ys  test_not_comprehensive.ys  test_not_error.pi  test_not_error.ys  test_range.pi  test_range.ys  test_server.ys  test_shared_global.ys  test_str.ys
src/: ast.rs  cli.rs  compiler.rs  error.rs  formatter.rs  lexer.rs  main.rs  parser.rs  vm.rs
src/backends/: cranelift.rs  interpreter.rs  mod.rs
src/tests/: mod.rs  test_parser.rs
yatsuscript-lsp/src/: backend.rs
ys-cli/src/: main.rs  run.rs
