[package]
name = "small_jit"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.16.1"
rustc-hash = "2.1.1"
thiserror = "2.0.18"
tokio = { version = "1.43.0", features = ["full"] }
async-recursion = "1.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
cranelift = "0.128.3"
cranelift-module = "0.128.3"
cranelift-jit = "0.128.3"
cranelift-native = "0.128.3"
cranelift-frontend = "0.128.3"
pico-args = "0.5.0"
