[package]
name        = "small_interpreter"
version     = "0.1.0"
edition     = "2024"
description = "A fast bytecode interpreter for the Pi scripting language, featuring NaN-boxing, a generational GC, and async concurrency via Tokio."
repository  = "https://github.com/DevYatsu/small_interpreter"
license     = "MIT"
keywords    = ["interpreter", "scripting", "bytecode", "async", "tokio"]
categories  = ["compilers", "command-line-utilities"]
readme      = "README.md"
exclude     = ["examples/", "target/"]

[dependencies]
logos          = "0.16.1"
rustc-hash     = "2.1.1"
thiserror      = "2.0.18"
tokio          = { version = "1.50.0", features = ["full"] }
async-recursion = "1.1.1"
reqwest        = { version = "0.13.2", features = ["json"] }
pico-args      = "0.5.0"
mimalloc       = "0.1.48"
rustyline = "17.0.2"
rayon = "1.11.0"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
